# TheGame

./: CMakeLists.txt  README.md  main.cpp
Asset/: pickaxe.psd
Asset/SpriteSheets/: all.psd  allTorso.psd  offsets.txt
Engine/Renderer/: DrawColor.cpp  DrawColor.hpp  Event.cpp  Event.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
Engine/Renderer/Animation/: Animate.cpp  Animate.hpp
Engine/Renderer/Scene/: Scene.cpp  Scene.hpp
Engine/Renderer/Scene/World/: GridAccessor.cpp  GridAccessor.hpp  World.cpp  World.hpp
Engine/Scripting/: SaveLoad.cpp  SaveLoad.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Engine/UI/: UI.cpp  UI.hpp  UIComponents.cpp  UIComponents.hpp  UIEngine.cpp  UIEngine.hpp
Engine/Utility/Rect/: Rect.cpp  Rect.hpp
Engine/Utility/Timer/: Timer.cpp  Timer.hpp
Engine/Utility/Types/: Types.cpp  Types.hpp
Game/: AnimationController.cpp  AnimationController.hpp  Gameplay.cpp  Gameplay.hpp  Momentum.cpp  Momentum.hpp  save.yml
Game/Enemy/: Enemy.cpp  Enemy.hpp
Game/Player/: Player.cpp  Player.hpp  PlayerController.cpp  PlayerController.hpp
Item/: Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp
Runtime/Asset/: BBFont.psd  Font.psd  Itemholder.psd  Tileset64.psd
Runtime/Asset/SpriteSheets/: offsets.txt
Runtime/ItemData/: Items.json
World/: World.cpp  World.hpp
